Minor fix for literal creation palette not showing up sometimes

--- a/packages/glsp-client/style/diagram.css
+++ b/packages/glsp-client/style/diagram.css
@@ -117,3 +117,7 @@
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
 }
+
+.command-palette {
+   animation: none;
+}
